--- a/package.json
+++ b/package.json
@@ -4,24 +4,9 @@
   "private": true,
   "dependencies": {
     "@alch/alchemy-web3": "^1.1.7",
-    "@mdi/font": "^4.2.95",
-    "animate.css": "^4.1.1",
-    "axios": "^0.23.0",
-    "bootstrap": "^4.3.1",
-    "bosket": "^0.2.3",
-    "brace": "^0.11.1",
-    "bs-custom-file-input": "^1.3.4",
-    "compass-mixins": "^0.12.12",
-    "ethers": "^5.7.2",
-    "file-saver": "^2.0.5",
-    "next": "^12.1.0",
-    "react": "^16.9.0",
-    "react-ace": "^7.0.4",
-    "react-bootstrap": "^1.6.4",
-    "react-dom": "^16.9.0",
-    "sass": "^1.56.0",
-    "web3": "^1.6.0",
     "@andrewscwei/super-error": "^2.1.0",
+    "@mdi/font": "^4.2.95",
+    "@react-hook/window-size": "^3.1.1",
     "@react-rxjs/core": "^0.9.8",
     "@react-rxjs/utils": "^0.9.5",
     "@react95/core": "^6.0.4",
@@ -33,19 +18,36 @@
     "@web3-onboard/core": "^2.8.1",
     "@web3-onboard/injected-wallets": "^2.2.0",
     "alchemy-sdk": "^2.2.0",
+    "animate.css": "^4.1.1",
+    "axios": "^0.23.0",
     "bignumber.js": "^9.1.0",
+    "bootstrap": "^4.3.1",
+    "bosket": "^0.2.3",
+    "brace": "^0.11.1",
+    "bs-custom-file-input": "^1.3.4",
+    "compass-mixins": "^0.12.12",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.2",
+    "ethers": "^5.7.2",
     "file-loader": "^6.2.0",
+    "file-saver": "^2.0.5",
     "lodash": "^4.17.21",
+    "next": "^12.1.0",
+    "react": "^16.9.0",
+    "react-ace": "^7.0.4",
+    "react-bootstrap": "^1.6.4",
+    "react-dom": "^16.9.0",
     "react-draggable": "^4.4.5",
     "react-redux": "^8.0.2",
+    "react-rnd": "^10.3.7",
     "react95": "^3.12.2",
     "resolve-url-loader": "^5.0.0",
     "rxjs": "^7.5.6",
+    "sass": "^1.56.0",
     "styled-components": "^5.3.5",
     "wagmi": "^0.6.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "web3": "^1.6.0"
   },
   "scripts": {
     "dev": "next dev",
